# Face-Detection

./: .gitignore  CMakeLists.txt  README.md
include/: detector.h  draw.h
src/: detector.cpp  draw.cpp  face_detection.cpp
